--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -979,6 +979,14 @@ section {
 /*--------------------------------------------------------------
 # teklif Side 
 --------------------------------------------------------------*/
+#teklif {
+  padding-top: 100px;
+  background-image: url(../img/teklif-bg.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 #teklif h3 {
   font-family: "Metropolis-Medium";
   font-size: 42px;
@@ -992,7 +1000,8 @@ section {
   margin-bottom: 30px;
 }
 
-#teklif form input, #teklif form textarea {
+#teklif form input,
+#teklif form textarea {
   width: 100%;
   margin-bottom: 14px;
   border-radius: 14px;
@@ -1004,23 +1013,28 @@ section {
   color: #171717;
 }
 
-#teklif form input::-webkit-input-placeholder, #teklif form textarea::-webkit-input-placeholder {
+#teklif form input::-webkit-input-placeholder,
+#teklif form textarea::-webkit-input-placeholder {
   color: rgba(23, 23, 23, 0.377);
 }
 
-#teklif form input:-ms-input-placeholder, #teklif form textarea:-ms-input-placeholder {
+#teklif form input:-ms-input-placeholder,
+#teklif form textarea:-ms-input-placeholder {
   color: rgba(23, 23, 23, 0.377);
 }
 
-#teklif form input::-ms-input-placeholder, #teklif form textarea::-ms-input-placeholder {
+#teklif form input::-ms-input-placeholder,
+#teklif form textarea::-ms-input-placeholder {
   color: rgba(23, 23, 23, 0.377);
 }
 
-#teklif form input::placeholder, #teklif form textarea::placeholder {
+#teklif form input::placeholder,
+#teklif form textarea::placeholder {
   color: rgba(23, 23, 23, 0.377);
 }
 
-#teklif form input:focus, #teklif form textarea:focus {
+#teklif form input:focus,
+#teklif form textarea:focus {
   outline: none;
 }
 
@@ -1068,7 +1082,7 @@ section {
   display: block;
   background-color: #000000;
   color: #fff;
-  font-family: "Metropolis-Medium",sans-serif;
+  font-family: "Metropolis-Medium", sans-serif;
   padding: 12px 0;
   text-align: center;
   position: relative;
@@ -1081,18 +1095,89 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Faq Two Side
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# Contact Side 
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
-# newsletter Side 
---------------------------------------------------------------*/
-/*--------------------------------------------------------------
 # Footer Side
 --------------------------------------------------------------*/
+#footer {
+  background-color: #fafafa;
+  padding-top: 86px;
+}
+
+#footer img {
+  padding-bottom: 20px;
+}
+
+#footer h5 {
+  font-size: 18px;
+  font-family: "Metropolis-Medium";
+}
+
+#footer .mail {
+  margin-top: 84px;
+  margin-bottom: 0;
+}
+
+@media (max-width: 768px) {
+  #footer .mail {
+    margin-top: 30px;
+  }
+}
+
+#footer .social-medias {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 16px;
+}
+
+#footer .social-medias a {
+  color: #000000;
+  font-size: 20px;
+}
+
+#footer .social-medias a + a {
+  margin-left: 30px;
+}
+
+#footer .link-title {
+  margin-bottom: 48px;
+}
+
+@media (max-width: 768px) {
+  #footer .link-title {
+    margin-bottom: 20px;
+  }
+}
+
+#footer ol li {
+  margin-bottom: 28px;
+}
+
+@media (max-width: 768px) {
+  #footer ol li {
+    margin-bottom: 10px;
+  }
+}
+
+#footer ol li a {
+  font-size: 18px;
+  font-family: "Metropolis-Regular";
+}
+
+#footer ol li a:hover {
+  color: #000000a9;
+}
+
+#footer .author {
+  background-color: #F7F7F7;
+  margin-top: 80px;
+}
+
+#footer .author p {
+  padding: 34px 0;
+  text-align: center;
+  margin: 0;
+}
 /*# sourceMappingURL=style.css.map */
