--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -785,6 +785,11 @@ section {
 # teklif Side 
 --------------------------------------------------------------*/
 #teklif {
+  padding-top: 100px;
+  background-image: url(../img/teklif-bg.png);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
   h3 {
     font-family: "Metropolis-Medium";
     font-size: 42px;
@@ -797,7 +802,8 @@ section {
     margin-bottom: 30px;
   }
   form {
-    input,textarea{
+    input,
+    textarea {
       width: 100%;
       margin-bottom: 14px;
       border-radius: 14px;
@@ -829,7 +835,7 @@ section {
       background-size: 5px 5px, 5px 5px, 1px 1.5em;
       background-repeat: no-repeat;
       appearance: none;
-      
+
       color: #171717;
       &::placeholder {
         color: rgba(23, 23, 23, 0.377);
@@ -838,16 +844,16 @@ section {
         outline: none;
       }
     }
-    .teklif-btn{
+    .teklif-btn {
       border-radius: 12px;
       display: block;
       background-color: #000000;
       color: #fff;
-      font-family: "Metropolis-Medium",sans-serif;
+      font-family: "Metropolis-Medium", sans-serif;
       padding: 12px 0;
       text-align: center;
       position: relative;
-      img{
+      img {
         position: absolute;
         top: calc(50% - 16px);
         right: 15px;
@@ -855,22 +861,66 @@ section {
     }
   }
 }
-/*--------------------------------------------------------------
-# Pricing
---------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-# Faq Two Side
---------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-# Contact Side 
---------------------------------------------------------------*/
-
-/*--------------------------------------------------------------
-# newsletter Side 
---------------------------------------------------------------*/
 
 /*--------------------------------------------------------------
 # Footer Side
 --------------------------------------------------------------*/
+#footer {
+  background-color: #fafafa;
+  padding-top: 86px;
+  img{
+    padding-bottom: 20px;
+  }
+  h5 {
+  
+    font-size: 18px;
+    font-family: "Metropolis-Medium";
+  }
+  .mail {
+    margin-top: 84px;
+    margin-bottom: 0;
+    @include md{
+      margin-top: 30px;
+    }
+  }
+  .social-medias {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+    a {
+    color: #000000;
+    font-size: 20px;
+    &+a{
+      margin-left: 30px;
+    }
+    }
+  }
+  .link-title{
+    margin-bottom: 48px;
+    @include md{
+      margin-bottom: 20px;
+    }
+  }
+  ol li{
+    margin-bottom: 28px;
+    @include md{
+      margin-bottom: 10px;
+    }
+    a{
+      font-size: 18px;
+      font-family: "Metropolis-Regular";
+      &:hover{
+        color: #000000a9;
+      }
+    }
+  }
+  .author{
+    background-color: #F7F7F7;
+    margin-top: 80px;
+    p{
+      padding: 34px 0;
+      text-align: center;
+      margin: 0;
+    }
+  }
+}
