--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -874,6 +874,13 @@ section {
 /*--------------------------------------------------------------
 # faq
 --------------------------------------------------------------*/
+#faq {
+  background-image: url(../img/faq-bg.png);
+  background-position: bottom right;
+  background-size: auto;
+  background-repeat: no-repeat;
+}
+
 #faq h3 {
   font-size: 42px;
   text-align: center;
@@ -981,8 +988,8 @@ section {
 --------------------------------------------------------------*/
 #teklif {
   padding-top: 100px;
-  background-image: url(../img/teklif-bg.png);
-  background-position: bottom;
+  background-image: url(../img/hero-bg.png);
+  background-position: 0px 150px;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -1171,7 +1178,7 @@ section {
 }
 
 #footer .author {
-  background-color: #F7F7F7;
+  background-color: #f7f7f7;
   margin-top: 80px;
 }
 
